test_files/negative/name/badescape.stats_strict
Not a PDF file
PDF error : Lexing error : invalid escape sequence in name context at offset 62 [0x3e] in file !
